added all routes and started work with departments

--- a/resources/js/lang/en.json
+++ b/resources/js/lang/en.json
@@ -10,6 +10,18 @@
   "page_not_found": "Page Not Found",
   "go_home": "Go Home",
   "logout": "Logout",
+  "users": "Users",
+  "departments": "Departments",
+  "users_list": "List",
+  "job_titles": "Job Titles",
+  "roles": "Roles",
+  "settlements": "Settlements",
+  "calendar": "Calendar",
+  "statistics": "Statistics",
+  "events": "Events",
+  "regions": "Regions",
+  "cities": "Cities",
+  "search_placeholder": "Search...",
   "email": "Email",
   "remember_me": "Remember Me",
   "password": "Password",
