done create and delete

--- a/resources/js/lang/en.json
+++ b/resources/js/lang/en.json
@@ -21,6 +21,9 @@
   "events": "Events",
   "regions": "Regions",
   "cities": "Cities",
+  "actions": "Actions",
+  "title": "Title",
+  "create": "Create",
   "search_placeholder": "Search...",
   "email": "Email",
   "remember_me": "Remember Me",
