--- a/resources/js/lang/en.json
+++ b/resources/js/lang/en.json
@@ -1,6 +1,7 @@
 {
   "ok": "Ok",
   "cancel": "Cancel",
+  "department": "Department",
   "error_alert_title": "Oops...",
   "error_alert_text": "Something went wrong! Please try again.",
   "token_expired_alert_title": "Session Expired!",
