done with departments and jobtitles

--- a/resources/js/lang/en.json
+++ b/resources/js/lang/en.json
@@ -1,6 +1,7 @@
 {
   "ok": "Ok",
   "cancel": "Cancel",
+  "edit": "Edit",
   "department": "Department",
   "error_alert_title": "Oops...",
   "error_alert_text": "Something went wrong! Please try again.",
