--- a/resources/js/lang/en.json
+++ b/resources/js/lang/en.json
@@ -1,4 +1,39 @@
 {
+  "users_index": "Users list",
+  "users_show": "Users show",
+  "users_create": "Create users",
+  "users_edit": "Edit users",
+  "users_delete": "Delete users",
+  "job_titles_index": "Job titles list",
+  "job_titles_show": "Job titles show",
+  "job_titles_create": "Create job titles",
+  "job_titles_edit": "Edit job titles",
+  "job_titles_delete": "Delete job titles",
+  "departments_index": "Departments list",
+  "departments_show": "Departments show",
+  "departments_create": "Create departments",
+  "departments_edit": "Edit departments",
+  "departments_delete": "Delete departments",
+  "roles_index": "Roles list",
+  "roles_show": "Roles show",
+  "roles_create": "Create roles",
+  "roles_edit": "Edit roles",
+  "roles_delete": "Delete roles",
+  "events_index": "Envets list",
+  "events_show": "Envets show",
+  "events_create": "Create envets",
+  "events_edit": "Edit envets",
+  "events_delete": "Delete envets",
+  "statistics_index": "Statistics list",
+  "statistics_show": "Statistics show",
+  "statistics_create": "Create statistics",
+  "statistics_edit": "Edit statistics",
+  "statistics_delete": "Delete statistics",
+  "settlements_index": "Settlements list",
+  "settlements_show": "Settlements show",
+  "settlements_create": "Create settlements",
+  "settlements_edit": "Edit settlements",
+  "settlements_delete": "Delete settlements",
   "ok": "Ok",
   "cancel": "Cancel",
   "edit": "Edit",
