almost done with roles

--- a/resources/js/lang/en.json
+++ b/resources/js/lang/en.json
@@ -34,6 +34,15 @@
   "settlements_create": "Create settlements",
   "settlements_edit": "Edit settlements",
   "settlements_delete": "Delete settlements",
+  "sex": "Sex",
+  "male": "Male",
+  "woman": "Woman",
+  "not_indicated": "Not indicated",
+  "active": "Active",
+  "closed": "Closed",
+  "role": "Role",
+  "job_title": "Job title",
+  "status": "Status",
   "ok": "Ok",
   "cancel": "Cancel",
   "edit": "Edit",
