done with users create and edit pages

--- a/resources/js/lang/en.json
+++ b/resources/js/lang/en.json
@@ -36,9 +36,12 @@
   "settlements_delete": "Delete settlements",
   "sex": "Sex",
   "male": "Male",
-  "woman": "Woman",
+  "female": "Female",
+  "not_known": "Not known",
   "not_indicated": "Not indicated",
   "active": "Active",
+  "manager": "Manager",
+  "employee": "Employee",
   "closed": "Closed",
   "role": "Role",
   "job_title": "Job title",
