--- a/resources/js/lang/ru.json
+++ b/resources/js/lang/ru.json
@@ -1,56 +1,103 @@
 {
-  "ok": "Ok",
-  "cancel": "Cancel",
-  "edit": "Edit",
-  "department": "Department",
-  "error_alert_title": "Oops...",
-  "error_alert_text": "Something went wrong! Please try again.",
-  "token_expired_alert_title": "Session Expired!",
-  "token_expired_alert_text": "Please log in again to continue.",
-  "login": "Log In",
-  "register": "Register",
-  "page_not_found": "Page Not Found",
-  "go_home": "Go Home",
-  "logout": "Logout",
-  "users": "Users",
-  "departments": "Departments",
-  "users_list": "List",
-  "job_titles": "Job Titles",
-  "roles": "Roles",
-  "settlements": "Settlements",
-  "calendar": "Calendar",
-  "statistics": "Statistics",
-  "events": "Events",
-  "regions": "Regions",
-  "cities": "Cities",
-  "actions": "Actions",
-  "title": "Title",
-  "create": "Create",
-  "search_placeholder": "Search...",
+  "users_index": "Список пользователей",
+  "users_show": "Просмотр пользователя",
+  "users_create": "Создание пользователей",
+  "users_edit": "Редактировать пользователей",
+  "users_delete": "Удаление пользователей",
+  "job_titles_index": "Список должностей",
+  "job_titles_show": "Просмотр должности",
+  "job_titles_create": "Создание должности",
+  "job_titles_edit": "Изменить должность",
+  "job_titles_delete": "Удалить должность",
+  "departments_index": "Список отделов",
+  "departments_show": "Просмотр отдела",
+  "departments_create": "Создание отдел",
+  "departments_edit": "Редактировать отдел",
+  "departments_delete": "Удалить отдел",
+  "roles_index": "Список ролей",
+  "roles_show": "Просмотр роли",
+  "roles_create": "Создание роли",
+  "roles_edit": "Редактировать роль",
+  "roles_delete": "Удалить роль",
+  "events_index": "Список событий",
+  "events_show": "Просмотр события",
+  "events_create": "Создание события",
+  "events_edit": "Редактировать событие",
+  "events_delete": "Удалить объятие",
+  "statistics_index": "Список статистики",
+  "statistics_show": "Просмотр статистики",
+  "statistics_create": "Создать статистику",
+  "statistics_edit": "Редактировать статистику",
+  "statistics_delete": "Удалить статистику",
+  "settlements_index": "Список населенных пунктов",
+  "settlements_show": "Покзать населенные пункты",
+  "settlements_create": "Создать населенный пункт",
+  "settlements_edit": "Редактировать населенный пункт",
+  "settlements_delete": "Удалить населенный пункт",
+  "sex": "Пол",
+  "male": "Мужской",
+  "female": "Женский",
+  "not_known": "Не указано",
+  "not_indicated": "Не указано",
+  "active": "Активный",
+  "manager": "Менеджер",
+  "employee": "Сотрудник",
+  "closed": "Не активно",
+  "role": "Роль",
+  "job_title": "Должность",
+  "status": "Статус",
+  "ok": "Хорошо!",
+  "cancel": "Отмена",
+  "edit": "Редактировать",
+  "department": "Отделение",
+  "error_alert_title": "Упс...",
+  "error_alert_text": "Что-то пошло не так! ",
+  "token_expired_alert_title": "Сессия истекла!",
+  "token_expired_alert_text": "Пожалуйста, войдите еще раз, чтобы продолжить.",
+  "login": "Авторизоваться",
+  "register": "Регистрация",
+  "page_not_found": "Страница не найдена",
+  "go_home": "Вернуться на главную страницу",
+  "logout": "Выйти",
+  "users": "Пользователи",
+  "departments": "Отделы",
+  "users_list": "Список",
+  "job_titles": "Должности",
+  "roles": "Роли",
+  "settlements": "Населенные пункты",
+  "calendar": "Календарь",
+  "statistics": "Статистика",
+  "events": "События",
+  "regions": "Регионы",
+  "cities": "Города",
+  "actions": "Действия",
+  "title": "Наименование",
+  "create": "Создавать",
+  "search_placeholder": "Поиск...",
   "email": "Email",
-  "remember_me": "Remember Me",
-  "password": "Password",
-  "forgot_password": "Forgot Your Password?",
-  "confirm_password": "Confirm Password",
-  "name": "Name",
-  "toggle_navigation": "Toggle navigation",
-  "home": "Home",
-  "you_are_logged_in": "You are logged in!",
-  "reset_password": "Reset Password",
-  "send_password_reset_link": "Send Password Reset Link",
-  "settings": "Settings",
-  "profile": "Profile",
-  "your_info": "Your Info",
-  "info_updated": "Your info has been updated!",
-  "update": "Update",
-  "your_password": "Your Password",
-  "password_updated": "Your password has been updated!",
-  "new_password": "New Password",
-  "login_with": "Login with",
-  "register_with": "Register with",
-  "verify_email": "Verify Email",
-  "send_verification_link": "Send Verification Link",
-  "resend_verification_link": "Resend Verification Link ?",
-  "failed_to_verify_email": "Failed to verify email.",
-  "verify_email_address": "We sent you an email with an the verification link."
+  "remember_me": "Запомнить меня",
+  "password": "Пароль",
+  "forgot_password": "Забыли пароль?",
+  "confirm_password": "Подтвердите пароль",
+  "name": "Имя",
+  "toggle_navigation": "Переключить навигацию",
+  "home": "Дом",
+  "you_are_logged_in": "Вы вошли в систему!",
+  "reset_password": "Сброс пароля",
+  "send_password_reset_link": "Отправить ссылку для сброса пароля",
+  "settings": "Настройки",
+  "profile": "Профиль",
+  "your_info": "Ваша информация",
+  "info_updated": "Ваша информация обновлена!",
+  "update": "Обновить",
+  "your_password": "Ваш пароль",
+  "password_updated": "Ваш пароль был обновлен!",
+  "new_password": "Новый пароль",
+  "login_with": "Войдите с",
+  "register_with": "Зарегистрироваться",
+  "verify_email": "Подтвердить Email",
+  "send_verification_link": "Отправить ссылку для подтверждения",
+  "resend_verification_link": "Отправить ссылку для подтверждения повторно?",
+  "failed_to_verify_email": "Не удалось подтвердить электронную почту.",
+  "verify_email_address": "Мы отправили вам электронное письмо со ссылкой для подтверждения."
 }
