--- a/resources/js/lang/ru.json
+++ b/resources/js/lang/ru.json
@@ -81,7 +81,7 @@
   "confirm_password": "Подтвердите пароль",
   "name": "Имя",
   "toggle_navigation": "Переключить навигацию",
-  "home": "Дом",
+  "home": "Главная",
   "you_are_logged_in": "Вы вошли в систему!",
   "reset_password": "Сброс пароля",
   "send_password_reset_link": "Отправить ссылку для сброса пароля",
