--- a/resources/js/lang/ru.json
+++ b/resources/js/lang/ru.json
@@ -72,7 +72,7 @@
   "cities": "Города",
   "actions": "Действия",
   "title": "Наименование",
-  "create": "Создавать",
+  "create": "Создать",
   "search_placeholder": "Поиск...",
   "email": "Email",
   "remember_me": "Запомнить меня",
