done activity log page

--- a/resources/js/lang/ru.json
+++ b/resources/js/lang/ru.json
@@ -34,6 +34,8 @@
   "settlements_create": "Создать населенный пункт",
   "settlements_edit": "Редактировать населенный пункт",
   "settlements_delete": "Удалить населенный пункт",
+  "from": "с",
+  "to": "на",
   "sex": "Пол",
   "male": "Мужской",
   "female": "Женский",
@@ -99,5 +101,13 @@
   "send_verification_link": "Отправить ссылку для подтверждения",
   "resend_verification_link": "Отправить ссылку для подтверждения повторно?",
   "failed_to_verify_email": "Не удалось подтвердить электронную почту.",
-  "verify_email_address": "Мы отправили вам электронное письмо со ссылкой для подтверждения."
+  "updated_at": "Обновлено",
+  "verify_email_address": "Мы отправили вам электронное письмо со ссылкой для подтверждения.",
+  "import_regions": "Импорт регионов",
+  "import_cities": "Импорт городов",
+  "of_table": "из",
+  "loading_please_wait": "Загрузка, пожалуйста подождите...",
+  "rows_per_page": "Строк на странице:",
+  "no_data_text": "Данные не доступны",
+  "activity_log": "История изменений"
 }
