done with activity log fully

--- a/resources/js/lang/ru.json
+++ b/resources/js/lang/ru.json
@@ -34,6 +34,7 @@
   "settlements_create": "Создать населенный пункт",
   "settlements_edit": "Редактировать населенный пункт",
   "settlements_delete": "Удалить населенный пункт",
+  "updated": "обновлено",
   "from": "с",
   "to": "на",
   "sex": "Пол",
