--- a/resources/js/lang/ru.json
+++ b/resources/js/lang/ru.json
@@ -46,6 +46,14 @@
   "manager": "Менеджер",
   "employee": "Сотрудник",
   "closed": "Не активно",
+  "today": "Сегодня",
+  "month": "Месяц",
+  "week": "Неделя",
+  "day": "День",
+  "description": "Описание",
+  "start_date": "Начальная дата",
+  "end_date": "Конечная дата",
+  "executor": "Исполнитель",
   "role": "Роль",
   "job_title": "Должность",
   "status": "Статус",
