[FEAUTER] almost done with events request side of front

--- a/resources/js/lang/ru.json
+++ b/resources/js/lang/ru.json
@@ -54,6 +54,8 @@
   "start_date": "Начальная дата",
   "end_date": "Конечная дата",
   "executor": "Исполнитель",
+  "delete": "Удалить",
+  "done": "Выполнено",
   "role": "Роль",
   "job_title": "Должность",
   "status": "Статус",
