[FEAUTER] STARTED STATISTICS CHARTS

--- a/resources/js/lang/ru.json
+++ b/resources/js/lang/ru.json
@@ -1,4 +1,6 @@
 {
+  "six_months": "6 месяцев",
+  "year": "Год",
   "users_index": "Список пользователей",
   "users_show": "Просмотр пользователя",
   "users_create": "Создание пользователей",
