--- a/resources/js/lang/ru.json
+++ b/resources/js/lang/ru.json
@@ -1,5 +1,8 @@
 {
+  "no_data_text_period": "Нет данных за этот период!",
   "six_months": "6 месяцев",
+  "choice": "Выбрать",
+  "picker_menu": "Выбор в меню",
   "year": "Год",
   "users_index": "Список пользователей",
   "users_show": "Просмотр пользователя",
