--- a/resources/lang/ru.json
+++ b/resources/lang/ru.json
@@ -2,5 +2,17 @@
   "region": "Регион",
   "regions": "Регионы",
   "city": "Город",
-  "cities": "Города"
+  "cities": "Города",
+  "Jan." : "Янв.",
+  "Feb." : "Фев.",
+  "Mar." : "Мар.",
+  "Apr." : "Апр.",
+  "May." : "Май",
+  "Jun." : "Июнь",
+  "Jul." : "Июль",
+  "Aug." : "Авг.",
+  "Sep." : "Сент.",
+  "Oct." : "Окт.",
+  "Nov." : "Нояб.",
+  "Dec." : "Дек."
 }
