[DONE WITH GRAPHICS ]  when no data show no data item with translated

--- a/resources/js/lang/ru.json
+++ b/resources/js/lang/ru.json
@@ -85,6 +85,7 @@
   "settlements": "Населенные пункты",
   "calendar": "Календарь",
   "statistics": "Статистика",
+  "statistics_done_tasks": "Статистика завершенных задач",
   "events": "События",
   "regions": "Регионы",
   "cities": "Города",
