done with chart assigns

--- a/resources/js/lang/ru.json
+++ b/resources/js/lang/ru.json
@@ -1,5 +1,6 @@
 {
   "no_data_text_period": "Нет данных за этот период!",
+  "loading": "Подождите, идет загрузка...",
   "six_months": "6 месяцев",
   "choice": "Выбрать",
   "picker_menu": "Выбор в меню",
