a=done with success alerts

--- a/resources/lang/ru.json
+++ b/resources/lang/ru.json
@@ -14,5 +14,8 @@
   "Sep." : "Сент.",
   "Oct." : "Окт.",
   "Nov." : "Нояб.",
-  "Dec." : "Дек."
+  "Dec." : "Дек.",
+  "success_saved": "Сохранение прошло успешно.",
+  "success_updated": "Обновление прошло успешно.",
+  "success_deleted": "Удалени прошло успешно."
 }
