--- a/resources/lang/ru.json
+++ b/resources/lang/ru.json
@@ -17,5 +17,6 @@
   "Dec." : "Дек.",
   "success_saved": "Сохранение прошло успешно.",
   "success_updated": "Обновление прошло успешно.",
-  "success_deleted": "Удалени прошло успешно."
+  "success_deleted": "Удалени прошло успешно.",
+  "success_updated_status": "Обновление статуса прошло успешно."
 }
