--- a/resources/js/lang/ru.json
+++ b/resources/js/lang/ru.json
@@ -2,6 +2,7 @@
   "err_save_msg" : "Не удается сохранить !",
   "err_edit_msg": "Не удается отредактировать !",
   "err_del_msg": "Не удается удалить возможно есть связанные данные !",
+  "err_upd_status": "Не удалось обновить статус !",
   "no_data_text_period": "Нет данных за этот период!",
   "loading": "Подождите, идет загрузка...",
   "six_months": "6 месяцев",
