--- a/resources/js/lang/ru.json
+++ b/resources/js/lang/ru.json
@@ -1,9 +1,11 @@
 {
-  "err_save_msg" : "Не удается сохранить !",
-  "err_edit_msg": "Не удается отредактировать !",
-  "err_del_msg": "Не удается удалить возможно есть связанные данные !",
-  "err_upd_status": "Не удалось обновить статус !",
-  "no_data_text_period": "Нет данных за этот период!",
+  "err_save_msg" : "Не удается сохранить",
+  "err_edit_msg": "Не удается отредактировать",
+  "err_del_msg": "Не удается удалить возможно есть связанные данные",
+  "err_export": "Не удалось экспортировать файл",
+  "err_import": "Не удалось импортировать файл",
+  "err_upd_status": "Не удалось обновить статус",
+  "no_data_text_period": "Нет данных за этот период",
   "loading": "Подождите, идет загрузка...",
   "six_months": "6 месяцев",
   "choice": "Выбрать",
@@ -127,6 +129,7 @@
   "verify_email_address": "Мы отправили вам электронное письмо со ссылкой для подтверждения.",
   "import_regions": "Импорт регионов",
   "import_cities": "Импорт городов",
+  "importing": "Импортировать",
   "of_table": "из",
   "loading_please_wait": "Загрузка, пожалуйста подождите...",
   "rows_per_page": "Строк на странице:",
